Pipes: A Data Flow Framework using Process Graphs 
"http://pipes.tinkerpop.com":http://pipes.tinkerpop.com

```xml
<repository>
  <id>tinkerpop-repository</id>
  <name>TinkerPop Maven2 Repository</name>
  <url>http://tinkerpop.com/maven2</url>
</repository>
```

==<hr/>==

h3. Version 1.0 (Pipes -- NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>1.0-SNAPSHOT</version>
</dependency>
```

* Added @SelectPipe@ to select the objects of named steps from a pipeline
* Heavily reworked @PipesFluentPipeline@ JavaDoc to make it a single point of reference
* Updated @LoopPipe@ semantics such that if there is an emit function, then the final object in a while isn't returned

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-sink-pipe.png!

h3. Version 0.9 (Sink -- December 7, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.9</version>
</dependency>
```

* Removed all "Blueprints":http://blueprints.tinkerpop.com graph related dependencies
* Renamed @UniquePathFilterPipe@ to @CyclicPathFilterPipe@
* Renamed and removed numerous methods in @FluentPipeline@ to make DSL construction more concise
* Updated @LoopPipe@ to support emit functionality via @PipeFunction@
* Added @StorePipe@ to lazily save objects to provided collection
* Added function support to @DeduplicateFilterPipe@

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-cleaner-pipe.png!

h3. Version 0.8 (Cleaner -- September 18, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.8</version>
</dependency>
```

* @SideEffectPipe@ now has signature of @<S,T>@ instead of @<S,E,T>@
* @GroupCountFunctionPipe@ has signature of @<S,K>@ to denote the key of its @Map<K,Number>@ side-effect
* Removed @ComparisonFilterPipe@ as it is confusing and now @PipeHelper@ has comparison support